--- a/profile.html
+++ b/profile.html
@@ -125,7 +125,7 @@
                         <h3 class="title bg-white d-inline-block profile-title">Profile</h3>
                     </div>
                 </div>
-                <div class="user-wrapper mx-auto d-flex flex-wrap justify-content-center justify-content-lg-start align-items-center mt-md-4 mb-md-4 mb-3">
+                <div class="user-wrapper mx-auto d-flex flex-wrap justify-content-center align-items-center mt-md-4 mb-md-4 mb-3">
                     <div class="user-thumb d-none d-md-block">
                         <img src="assets/images/thumb/user.png" alt="thumb">
                     </div>
